# unstructured-python-client

./: .genignore  .gitignore  CHANGELOG.md  LICENSE.md  Makefile  README.md  RELEASES.md  USAGE.md  _custom_code.patch  codeSamples.yaml  files.gen  gen.yaml  overlay_client.yaml  pylintrc  pyproject.toml  setup.py  tryout.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  speakeasy_sdk_generation.yml  speakeasy_sdk_publish.yaml
.speakeasy/: workflow.yaml
_dev/: README.md  openapi.json  openapi_client.json  overlay.yaml
_jupyter/: README_example.ipynb
_test_contract/: conftest.py  test_partition_via_api.py  test_retries.py
_test_contract/platform_api/: conftest.py  test_destinations.py  test_jobs.py  test_sources.py  test_templates.py  test_workflows.py
_test_unstructured_client/: conftest.py  test__decorators.py  test_check_url_protocol.py  test_custom_hooks.py  test_integration_freemium.py  test_split_pdf_hook.py  test_utils_retries.py  unit_utils.py
_test_unstructured_client/contract/: test_partition_via_api.py
_test_unstructured_client/integration/: test_client_credentials_e2e.py  test_decorators.py  test_integration.py  test_integration_freemium.py  test_platform_workflow_lifecycle.py  test_split_pdf_async_behavior.py
_test_unstructured_client/unit/: test_custom_hooks.py  test_encryption.py  test_pdf_utils.py  test_regeneration_guards.py  test_request_utils.py  test_retries.py  test_server_urls.py  test_split_pdf_async_behavior.py  test_split_pdf_hook.py
_test_unstructured_client/unit/auth/: _mock_transport.py  test_async_client_credentials.py  test_auth_header_hook.py  test_client_credentials.py  test_legacy_key_exchange.py
docs/models/errors/: detail.md  httpvalidationerror.md  servererror.md  validationerror.md
docs/models/operations/: canceljobrequest.md  canceljobresponse.md  canceljobsecurity.md  checkconnectionapiv1sourcessourceidconnectioncheckpostrequest.md  checkconnectionapiv1sourcessourceidconnectioncheckpostresponse.md  checkdestinationconnectionapiv1destinationsdestinationidconnectioncheckpostrequest.md  checkdestinationconnectionapiv1destinationsdestinationidconnectioncheckpostresponse.md  createchannelapiv1notificationschannelspostdata.md  createchannelapiv1notificationschannelspostrequest.md  createchannelapiv1notificationschannelspostresponse.md  createchannelapiv1notificationschannelspostresponsecreatechannelapiv1notificationschannelspost.md  createconnectioncheckdestinationsrequest.md  createconnectioncheckdestinationsresponse.md  createconnectioncheckdestinationssecurity.md  createconnectionchecksourcesrequest.md  createconnectionchecksourcesresponse.md  createconnectionchecksourcessecurity.md  createdestinationrequest.md  createdestinationresponse.md  createdestinationsecurity.md  createjobrequest.md  createjobresponse.md  createsourcerequest.md  createsourceresponse.md  createsourcesecurity.md  createworkflowchannelapiv1workflowsworkflowidnotificationschannelspostdata.md  createworkflowchannelapiv1workflowsworkflowidnotificationschannelspostrequest.md  createworkflowchannelapiv1workflowsworkflowidnotificationschannelspostresponse.md  createworkflowchannelapiv1workflowsworkflowidnotificationschannelspostresponsecreateworkflowchannelapiv1workflowsworkflowidnotificationschannelspost.md  createworkflowrequest.md  createworkflowresponse.md  createworkflowsecurity.md  deletechannelapiv1notificationschannelschanneliddeleterequest.md  deletechannelapiv1notificationschannelschanneliddeleteresponse.md  deletedestinationrequest.md  deletedestinationresponse.md  deletedestinationsecurity.md  deletesourcerequest.md  deletesourceresponse.md  deletesourcesecurity.md  (+106 more)
docs/models/shared/: astradbconnectorconfig.md  astradbconnectorconfiginput.md  azureaisearchconnectorconfig.md  azureaisearchconnectorconfiginput.md  azuredestinationconnectorconfig.md  azuredestinationconnectorconfiginput.md  azuresourceconnectorconfig.md  azuresourceconnectorconfiginput.md  bodycreatejob.md  bodypartitionparameters.md  bodypipeline1generalv0generalpost.md  bodyrunworkflow.md  config.md  (+176 more)
scripts/: prepare-readme.py  prepare_readme.py  publish.sh
src/unstructured/: document.py  general.py  sdk.py  sdkconfiguration.py
src/unstructured_client/: __init__.py  _version.py  basesdk.py  channels.py  destinations.py  general.py  httpclient.py  jobs.py  notifications.py  pemkeyauth.py  sdk.py  sdkconfiguration.py  sources.py  templates.py  users.py  workflow_channels.py  workflows.py
src/unstructuredclient/: general.py  sdk.py  sdkconfiguration.py
test_unstructured_client/: unit_utils.py
test_unstructured_client/unit/: test_custom_hooks.py  test_split_pdf_hook.py
tests/: helpers.py  test_utils_retries.py
(+294 files in other folders)
