[project]
name = "unstructured-client"
version = "0.42.12"
description = "Python Client SDK for Unstructured API"
authors = [{ name = "Unstructured" },]
readme = "README-PYPI.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles >=25.1.0,<26.0.0",
    "cryptography >=46.0.6,<47.0.0",
    "httpcore >=1.0.9",
    "httpx >=0.28.1,<1.0.0",
    "pydantic >=2.11.2",
    "pypdf >=6.9.2,<7.0.0",
    "pypdfium2 >=5.6.0,<6.0.0",
    "requests-toolbelt >=1.0.0,<2.0.0",
]
urls.repository = "https://github.com/Unstructured-IO/unstructured-python-client.git"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "deepdiff >=9.0.0,<10.0.0",
    "freezegun >=1.5.5,<2.0.0",
    "mypy ==1.15.0",
    "pylint ==3.2.3",
    "pyright ==1.1.398",
    "pytest >=8.4.2,<9.0.0",
    "pytest-asyncio >=1.3.0,<2.0.0",
    "pytest-httpx >=0.35.0,<1.0.0",
    "pytest-mock >=3.15.1,<4.0.0",
    "pytest-xdist >=3.8.0,<4.0.0",
    "types-aiofiles >=25.1.0.20251011,<26.0.0",
    "uvloop >=0.22.1,<1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


