[project]
name = "unstructured-client"
version = "0.43.2"
description = "Python Client SDK for Unstructured API"
authors = [{ name = "Unstructured" },]
readme = "README-PYPI.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles >=25.1.0",
    "httpcore >=1.0.9",
    "httpx >=0.28.1",
    "pydantic >=2.11.2",
    "pypdf >=6.9.2",
    "pypdfium2 >=5.6.0",
    "requests-toolbelt >=1.0.0",
]
urls.repository = "https://github.com/Unstructured-IO/unstructured-python-client.git"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "deepdiff >=9.0.0",
    "freezegun >=1.5.5",
    "mypy ==1.15.0",
    "pylint ==3.2.3",
    "pyright ==1.1.398",
    "pytest >=8.4.2",
    "pytest-asyncio >=1.3.0",
    "pytest-httpx >=0.35.0",
    "pytest-mock >=3.15.1",
    "pytest-xdist >=3.8.0",
    "types-aiofiles >=25.1.0.20251011",
    "uvloop >=0.22.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[tool.mypy]
disable_error_code = "misc"
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = "typing_inspect"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonpath"
ignore_missing_imports = true

[tool.pyright]
venvPath = "."
venv = ".venv"


